WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
REOPENED
177411
REGRESSION(
r214201
): WebProcess hangs during policy decisions
https://bugs.webkit.org/show_bug.cgi?id=177411
Summary
REGRESSION(r214201): WebProcess hangs during policy decisions
Alex Christensen
Reported
2017-09-23 12:50:37 PDT
REGRESSION(
r214201
): WebProcess hangs during policy decisions
Attachments
Patch
(44.31 KB, patch)
2017-09-23 16:44 PDT
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Patch
(42.41 KB, patch)
2017-10-06 13:57 PDT
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2017-09-23 16:44:28 PDT
Created
attachment 321641
[details]
Patch
Geoffrey Garen
Comment 2
2017-09-23 18:08:23 PDT
Comment on
attachment 321641
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=321641&action=review
r=me
> Source/WebKit/UIProcess/WebPageProxy.cpp:3756 > + m_decidePolicyForResponseRequest = 0;
Should be nullptr. Why did m_decidePolicyForResponseRequest change to a pointer?
Alex Christensen
Comment 3
2017-09-23 23:21:13 PDT
That's how it used to be. It was an awful mess.
Alex Christensen
Comment 4
2017-09-23 23:23:16 PDT
https://trac.webkit.org/r222431
Alex Christensen
Comment 5
2017-09-25 12:03:16 PDT
http://trac.webkit.org/r222453
Radar WebKit Bug Importer
Comment 6
2017-09-27 12:19:44 PDT
<
rdar://problem/34693061
>
Alex Christensen
Comment 7
2017-10-06 13:57:52 PDT
Reopening to attach new patch.
Alex Christensen
Comment 8
2017-10-06 13:57:53 PDT
Created
attachment 323042
[details]
Patch
mitz
Comment 9
2017-10-06 14:03:28 PDT
The API must behave consistently across platforms and correctly on all platforms.
Alex Christensen
Comment 10
2017-10-06 14:22:38 PDT
(In reply to mitz from
comment #9
)
> The API must behave consistently across platforms and correctly on all > platforms.
I agree wholeheartedly. Unfortunately, that would require
https://bugs.webkit.org/show_bug.cgi?id=160677
to land to allow us to wait during redirects and that's WAAAAY too risky for the branch.
mitz
Comment 11
2017-10-06 16:35:27 PDT
(In reply to Alex Christensen from
comment #10
)
> (In reply to mitz from
comment #9
) > > The API must behave consistently across platforms and correctly on all > > platforms. > I agree wholeheartedly. Unfortunately, that would require >
https://bugs.webkit.org/show_bug.cgi?id=160677
to land to allow us to wait > during redirects and that's WAAAAY too risky for the branch.
Not at all. Your change log says “[…] Mac, which depends on the ability to asynchronously call the completion handlers” but that’s incorrect. There is only one client of the API on macOS that, because it adapted to the changes introduced in
r214201
, depends on that behavior. All other software expects and works with the long-standing behavior of the API as it was prior to
r214201
on all platforms. That behavior must be reinstated. Because one client has come to depend on incorrect behavior, that one client can be accommodated by maintaining the some of all of the incorrect behavior as needed for that client.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug