Source/WebKit/WebProcess/WebCoreSupport/WebFrameLoaderClient.h
@@ -35,6 +35,7 @@ namespace WebKit {
 
 class PluginView;
 class WebFrame;
+struct WebsitePolicies;
     
 class WebFrameLoaderClient final : public WebCore::FrameLoaderClient {
 public:
@@ -47,6 +48,8 @@ public:
     bool frameHasCustomContentProvider() const { return m_frameHasCustomContentProvider; }
 
     void setUseIconLoadingClient(bool useIconLoadingClient) { m_useIconLoadingClient = useIconLoadingClient; }
+
+    void applyToDocumentLoader(const WebsitePolicies&);
 
 private:
     void frameLoaderDestroyed() final;
